--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,11 @@ body{
     font-size:calc(12px + 1.5vw);
     background-color: gray;
     padding: 10px;
-    font-size:1vw;
 }
 @media only screen and (min-width: 600px) {
     body{
-        background-color:black;}
+        background-color:black;
+        font-size:1vw;}
     }
 h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
