--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,9 +65,9 @@ img{
 .header{
     height: auto;
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     background-image: url(images/Utrecht2.jpg);
-    background-size:100%;
+    background-size:cover;
     background-repeat: no-repeat;
     background-position: center;   
 }
