--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,10 @@ body{
         background-color:black;
         font-size:1vw;}
     }
+@media screen and (min-width: 1000px) {
+      body {
+        font-size: 22px;
+  }
 h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
