--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
         background-color:black;
         font-size:1vw;}
     }
-@media screen and (min-width: 1000px) {
+@media only screen and (min-width: 1000px) {
       body {
         font-size: 22px;
   }
