--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,11 +27,12 @@ h3{
 ul{
     list-style-type: circle;
     width: 100%;
+    padding: 0px 10px 0px 0px;
 }
 @media only screen and (min-width: 600px) {
     ul{
         color:white;
-        padding: 0px 10px 0px 0px;}
+        padding: 0px 10px 0px 5px;}
     }
 img{
     float:right;
