--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ img{
     padding:15px;
 }
 .col-1 {width: 8.33%;}
-.col-2 {width: 16.66%; padding:0px 10px}
+.col-2 {width: 16.66%}
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
 .col-5 {width: 41.66%;}
