--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ img{
     text-align: center;
     font-weight: bold;
 }
-#attracties{
+.attracties{
     background-color: silver;
     padding: 5px 10px 5px 15px;
     width: 100%;
