--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ ul{
         padding: 0px 10px 0px 10px;}
     }
 img{
-    float:right;
+    float:left;
     vertical-align: bottom;
     width:100%;
     height:auto;
