--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,11 @@ img{
     vertical-align: bottom;
     width:100%;
     height:auto;
-    padding: 0px 10px 10px 10px;
+    padding: 10px;
+}
+@media only screen and (min-width: 600px) {
+    img{
+        max-width: 300px;}
 }
 [class*="col-"]{
     width:100%;
