--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ img{
 }
 .attracties{
     background-color: silver;
-    background-size: cover;
+    background-size: 100%;
     padding: 5px 10px 25px 20px;
     width: 100%;
     height:min-content;
