--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,8 @@ img{
 }
 @media only screen and (min-width: 600px) {
     img{
-        max-width: 350px;}
+        max-width: 350px;
+        border-width: 0,01vw;}
 }
 [class*="col-"]{
     width:100%;
